# my_data_engineering_repo

./: .gitignore  README.md
components/extract/: pyproject.toml
components/extract/src/extract/: __init__.py
components/extract/tests/: test_scraper.py
components/transfer/: pyproject.toml
components/utils/: pyproject.toml
components/utils/src/utils/: decorator.py
components/utils/src/utils/regex/: core.py  groups.py  regex.py
components/utils/tests/regex/: test_core.py
experiments/airflow_dag_generator/: README.md  build_dags.py  cfg.txt  dag_generator.py
experiments/airflow_dag_generator/configs/: workflow.yaml
experiments/flink_consumer(failed)/: flink_consumer.py
experiments/get_local_packages/: get_local_packages.py
experiments/regex/: README.md  engine.py  new.py  scratchpad.py  state.py  todo.md
experiments/rest_api/: app.py  dev.requirements..txt  load_data.py  requirements.txt
projects/airflow_web_kafka_spark_postgres/: Makefile  README.md  pyproject.toml  requirements.txt  todo.txt
projects/airflow_web_kafka_spark_postgres/airflow/: Makefile  docker-compose.yaml  notes.md
projects/airflow_web_kafka_spark_postgres/airflow/dags/web2kafka/: dag.py
projects/airflow_web_kafka_spark_postgres/airflow/docker/reference/: spark.Dockerfile
projects/airflow_web_kafka_spark_postgres/src/airflow/: notes.md
projects/airflow_web_kafka_spark_postgres/src/kafka2postgres/: README.md  docker-compose.yaml  main.py  requirements.txt
projects/airflow_web_kafka_spark_postgres/src/web2kafka/: README.md  config.yaml  docker-compose.yaml  main.py  requirements.txt
projects/airflow_web_kafka_spark_postgres/web2kafka/airflow/: task.Dockerfile
projects/airflow_web_kafka_spark_postgres/web2kafka/src/: hello.py
projects/near_real_time_streaming/: requirements.txt
projects/rest_api/: Makefile  dev.requirements..txt
tools/airflow_dev_env/: Makefile  docker-compose.yaml
tools/docker_container_w_python_ssh/: Dockerfile  docker-compose.yaml
tools/pex_tools/: Dockerfile  README.md  requirements.txt
tools/spark-submit template/: Makefile  README.md  docker-compose.yaml
(+50 files in other folders)
