[project]
name = "extract"
version = "0.1.0"
description = ""
authors = [
    {name = "RaymondOnn", email = "raymondonn@gmail.com"},
]
dependencies = [
    "httpx>=0.25.2",
    "selectolax>=0.3.17",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../utils#egg=utils",
    "pytest>=7.4.3",
]
