[project]
name = "transfer"
version = "0.1.0"
description = ""
authors = [
    {name = "RaymondOnn", email = "raymondonn@gmail.com"},
]
dependencies = [
    "confluent-kafka>=2.3.0",
    "fastavro>=1.9.1",
    "requests>=2.31.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../utils#egg=utils",
]
