[project]
name = "utils"
version = "0.1.0"
description = ""
authors = [
    {name = "RaymondOnn", email = "raymondonn@gmail.com"},
]
dependencies = [
    "colorama>=0.4.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
