[project]
name = "airflow_web_kafka_spark_postgres"
version = "0.1.0"
description = ""
authors = [
    {name = "RaymondOnn", email = "raymondonn@gmail.com"},
]
dependencies = [
    "py-avro-schema>=3.4.1",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../../components/extract#egg=extract",
    "-e file:///${PROJECT_ROOT}/../../components/transfer#egg=transfer",
    "-e file:///${PROJECT_ROOT}/../../components/utils#egg=utils",
]
